# Cache

./: .gitignore  2q_interactive.cpp  2q_tests.cc  CMakeLists.txt  README.md  cache_me_if_you_can.cpp  cache_me_if_you_can.hpp
include/: cache_me_if_you_can.hpp
src/: 2q_interactive.cpp  2q_tests.cc  cache_me_if_you_can.cpp
test_inputs/: 1_2e5.txt  3_14.txt  4_9.txt  6_4.txt  input_pic.txt  zipf_2e5.txt  zipf_2e5_limited.txt
